# flock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devenv.nix
.ai-workspace/: flock-review-followups.md
.github/workflows/: e2e.yml  release.yml  rust.yml
default-plugins/flock-selector/: Cargo.toml
default-plugins/flock-selector/src/: coder.rs  codespaces.rs  config.rs  devcontainers.rs  discovery.rs  frecency.rs  fuzzy.rs  live_sessions.rs  main.rs  palette.rs  ranking.rs  remote_bootstrap.rs  session.rs  ssh.rs  ui.rs
default-plugins/flock-sidebar/: Cargo.toml
default-plugins/flock-sidebar/assets/claude/: flock-agent-state.sh
default-plugins/flock-sidebar/assets/codex/: flock-agent-state.sh
default-plugins/flock-sidebar/assets/opencode/: flock-agent-state.js
default-plugins/flock-sidebar/src/: coder.rs  codespace.rs  detect.rs  devcontainer.rs  git.rs  hook.rs  main.rs  palette.rs  sessionizer.rs  state.rs  ui.rs
src/: commands.rs  main.rs  remote_agent.rs
src/tests/e2e/: cases.rs  remote_runner.rs
wix/: Zellij.wxl  main.wxs
xtask/src/: main.rs  metadata.rs  pipelines.rs
zellij-client/src/: cli_client.rs  lib.rs
zellij-client/src/web_client/: server_listener.rs
zellij-server/src/: background_jobs.rs  lib.rs  os_input_output.rs  os_input_output_unix.rs  os_input_output_windows.rs  pty.rs  route.rs  screen.rs  session_layout_metadata.rs
zellij-server/src/plugins/: plugin_map.rs  (+3 more)
zellij-tile/src/: shim.rs
zellij-utils/src/: cli.rs  consts.rs  data.rs  envs.rs  errors.rs  home_unix.rs  home_windows.rs  ipc.rs  lib.rs  logging.rs  remote_session_cleanup.rs  sessions.rs  setup.rs
(+61 files in other folders)
